ISSUE-18: optimize skeleton web-page

--- a/html/template.html.erb
+++ b/html/template.html.erb
@@ -10,7 +10,6 @@
   <body class="bg-light">
     <div class="container-fluid">
       <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
         <h2>Skeleton</h2>
       </div>
       <div class="row" style="min-height: 666px;">
@@ -24,20 +23,16 @@
           <div class="content" id="content">
             <pre><code><%= @pageobject %></code></pre>
           </div>
-          <br>
-          <h4 class="mb-3">Elements Tree:</h4>
-          <div class="content" id="content">
-            <pre><code><%= @elements_tree %></code></pre>
-          </div>
+        </div>
+        <h4 class="mb-3">Elements Tree:</h4>
+        <div class="content" id="content">
+          <pre><code><%= @elements_tree %></code></pre>
         </div>
       </div>
       <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">© 2018-2033 forqa</p>
-        <ul class="list-inline">
-          <li class="list-inline-item"><a href="#">Privacy</a></li>
-          <li class="list-inline-item"><a href="#">Terms</a></li>
-          <li class="list-inline-item"><a href="#">Support</a></li>
-        </ul>
+        <p class="mb-1">© 2018 <a href="https://github.com/forqa">forqa</a></p>
+        <p class="mb-1"><a href="https://github.com/alter-al">alter-al</a></p>
+        <ul class="list-inline"></ul>
       </footer>
     </div>
   </body>
