ISSUE-18: set gradient background

--- a/html/template.html.erb
+++ b/html/template.html.erb
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/index.css"/>
   </head>
-  <body class="bg-light">
+  <body class="bg-light" style="background: linear-gradient(white, lightblue);">
     <div class="container-fluid">
       <div class="py-5 text-center">
         <h2>Skeleton</h2>
