ISSUE-8: escape locator's quotes

--- a/html/template.html.erb
+++ b/html/template.html.erb
@@ -24,9 +24,11 @@
             <pre><code><%= @pageobject %></code></pre>
           </div>
         </div>
-        <h4 class="mb-3">Elements Tree:</h4>
-        <div class="content" id="content">
-          <pre><code><%= @elements_tree %></code></pre>
+        <div class="col-md-12">
+          <h4 class="mb-3">Elements Tree:</h4>
+          <div class="content" id="content">
+            <pre><code><%= @elements_tree %></code></pre>
+          </div>
         </div>
       </div>
       <footer class="my-5 pt-5 text-muted text-center text-small">
