ISSUE-1: Add Swift Page Objects implementation for iOS platform

--- a/server/template.html.erb
+++ b/server/template.html.erb
@@ -13,15 +13,15 @@
       <div class="py-5 text-center">
         <h2>Skeleton</h2>
       </div>
-      <div class="row" style="min-height: 670px;">
+      <div class="row" style="min-height: 666px;">
         <div class="col-md-4 mb-4">
-          <div class="aside" style="max-height: 670px;">
-            <div class="aside__img" style="background-image: url(screenshot.png); outline: 1px solid gray;"></div>
+          <div class="aside">
+            <div class="aside__img" style="width:100%; height:100%; background-image: url(screenshot.png); outline: 1px solid gray;"></div>
           </div>
         </div>
         <div class="col-md-8">
           <h4 class="mb-3">Screen Objects:</h4>
-          <div class="content" id="content" style="max-height: 670px; overflow-y: auto;">
+          <div class="content" id="content" style="max-height: 666px; overflow-y: auto;">
             <pre><code><%= @screen_objects %></code></pre>
           </div>
         </div>
